--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,6 @@
 #Blocks Configuration File:
 __NAME: "Blocks"
 __VERSION: 0.1.0
-__HEADER: "Title: ": $Name
+__HEADER: "Notes: ": $NAME
+__FOOTER: ""
+__INDENT: 0
